# gtfs-structure

./: .gitignore  .travis.yml  Cargo.toml  GTFSTransitData_RG (3).zip:Zone.Identifier  README.md  readme.md
.github/workflows/: publish.yml  tests.yml
examples/: gtfs_raw_reader.rs  gtfs_reader.rs  gtfs_reading.rs  raw_gtfs_reading.rs  reading.rs
fixtures/: routes.txt  stop_times.txt  stops.txt
fixtures/basic/: agency.txt  calendar.txt  pathways.txt  routes.txt  stop_times.txt  stops.txt  translations.txt
fixtures/fares_v1/: agency.txt  fare_attributes.txt  fare_rules.txt  readme.md  routes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
fixtures/fares_v2/: agency.txt  areas.txt  fare_leg_rules.txt  fare_media.txt  fare_products.txt  networks.txt  rider_categories.txt  route_networks.txt  routes.txt  stop_areas.txt  stop_times.txt  stops.txt
fixtures/interpolated_stop_times/: agency.txt
fixtures/missing_feed_date/: calendar_dates.txt
fixtures/only_required_fields/: agency.txt  routes.txt
fixtures/subdirectory/gtfs/: routes.txt  transfers.txt
src/: collection.rs  enums.rs  error.rs  gtfs.rs  gtfs_reader.rs  id.rs  lib.rs  objects.rs  raw_gtfs.rs  serde_helpers.rs  tests.rs
