[package]
description = "Read GTFS (public transit timetables) files"
name = "gtfs-structures"
version = "0.45.1"
authors = [
    "Tristram Gräbener <tristramg@gmail.com>",
    "Antoine Desbordes <antoine.desbordes@gmail.com>",
]
repository = "https://github.com/rust-transit/gtfs-structure"
license = "MIT"
edition = "2018"

[features]
default = ["read-url"]
read-url = ["reqwest", "futures"]

[dependencies]
bytes = "1"
csv = "1.1"
derivative = "2.1"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
chrono = "0.4.38"
itertools = "0.13"
sha2 = "0.10"
zip = "2.2"
thiserror = "1"
rgb = "0.8"

futures = { version = "0.3", optional = true }
reqwest = { version = "0.12", optional = true, features = ["blocking"] }

[dev-dependencies]
serde_json = "1.0"
