[package]
description = "Read GTFS (public transit timetables) files"
name = "gtfs-structures"
version = "0.47.1"
authors = [
    "Tristram Gräbener <tristramg@gmail.com>",
    "Antoine Desbordes <antoine.desbordes@gmail.com>",
]
repository = "https://github.com/rust-transit/gtfs-structure"
license = "MIT"
edition = "2018"

[features]
default = ["read-url"]
read-url = ["reqwest", "futures"]

[dependencies]
bytes = "1"
csv = "1.4"
derivative = "2.2"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
chrono = "0.4.42"
itertools = "0.14"
sha2 = "0.10"
zip = { version = "6.0", default-features = false, features = ["deflate"] }
thiserror = "2"
rgb = "0.8"
web-time = "1.1.0"

futures = { version = "0.3", optional = true }
reqwest = { version = "0.12", optional = true, features = ["blocking"] }

[dev-dependencies]
serde_json = "1.0"
